# qtrace

./: .gitignore  CMakeLists.txt  README.md
app/qtrNewtonSolver/: CMakeLists.txt
app/qtrNewtonViewer/: CMakeLists.txt  main.cpp  main.qml
app/qtrNewtonWriter-mt/: CMakeLists.txt  main.cpp
app/qtrNewtonWriter-nt/: CMakeLists.txt
app/qtrNewtonWriter-st/: CMakeLists.txt  main.cpp
qml/qtrQuick/: qmldir.in
src/qtrCore/: CMakeLists.txt
src/qtrQuick/: CMakeLists.txt  qtrCanvas.cpp  qtrCanvas.h
